починил конфликты